--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,7 @@
 ---
 ---
 
-@import
-  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
-  "minima/initialize";
+@import "{{ site.theme }}";
 
 a:hover, a:focus {
   font-weight: normal;
